--- a/common/pom.xml
+++ b/common/pom.xml
@@ -28,5 +28,10 @@
             <artifactId>transport</artifactId>
             <version>6.1.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka_2.12</artifactId>
+            <version>1.1.0</version>
+        </dependency>
     </dependencies>
 </project>
