--- a/common/pom.xml
+++ b/common/pom.xml
@@ -33,5 +33,17 @@
             <artifactId>kafka_2.12</artifactId>
             <version>1.1.0</version>
         </dependency>
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>2.9.0</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.springframework/spring-aspects -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-aspects</artifactId>
+            <version>5.0.6.RELEASE</version>
+        </dependency>
+
     </dependencies>
 </project>
